--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "firebase": "^10.6.0",
     "next": "14.0.2",
     "react": "^18",
