--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.6.0",
+    "json-server": "^1.0.0-beta.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
