--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.6.0",
+    "flowbite-react": "^0.10.1",
     "json-server": "^1.0.0-beta.1",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
