--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.6.0",
     "flowbite-react": "^0.10.1",
     "json-server": "^1.0.0-beta.1",
+    "lottie-react": "^2.4.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
