--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.6.0",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.3.21",
     "json-server": "^1.0.0-beta.1",
     "lottie-react": "^2.4.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
